Tue Mar 15 01:25:38 1994  "Matti E. Aarnio"  (mea@oj287.astro.utu.fi)

	* unix_tcp.c, unix.c:
	    Added  setsockopt(sock, SOL_SOCKET, SO_REUSEADDR, &on, sizeof(on))
	    into local socket creation.  Might help on getting faster
	    restart..

	* unix_tcp.c:
	    Finished the Solarisation -- found a way to do "FIONBIO"
	    in SysVr4 style..

	* unix.c:
	    Cleaned up the code a bit by introducing local macroes
	    _FD_ZERO(), _FD_SET(), _FD_CLR(), _FD_ISSET()  which act
	    depending upon actual variant used.

Fri Mar 11 19:50:40 1994  "Matti E. Aarnio"  (mea@oj287.astro.utu.fi)

	* qrdr.c, sendfile.c, send.c, bmail.c, unix_tcp.c, main.c, unix.c,
	  libsendcmd.c, mailify.c, file_queue.c, detach.c, io.c, read_config.c,
	  acctcat.c, transfer.c, libhdrtbx.c, nmr_unix.c, unix_msgs.c,
	  unix_files.c, prototypes.h, recv_file.c, send_file.c, util.c,
	  libexpnhome.c, libndparse.c, sysexits.h:

	    Solarisation...  AARGH...

	    BSD-compat -library readdir() returns boguous data, but
	    plain socket()'s don't have FIONBIO :-(  Sample Makefile
	    definitions for Solaris are a result of LONG battle..


Thu Mar  3 12:56:21 1994  Matti Aarnio  (mea@nic.funet.fi)

	* sendfile.c:
	    Gerald found an odd behaviour of the system when
	    sendfile was invoked in an environment without
	    stdin...  Fixed fixed by not closing implicitely
	    defined "stdin" file (handle 0) AFTER an explicite
	    fopen had gotten a REAL fd=0 file a moment before..

Wed Feb 23 10:26:08 1994  Matti Aarnio  (mea@nic.funet.fi)

	* sendfile.c:
	    A couple of additional aliases:  sf (sendfile),  bitprt (print)
	    (By Gerald Hanusch)

	* send.c:
	    *Prompts* text from the user only when it is used
	    from the keyboard.  Usage from a pipe will not
	    put extra prompts on the stdout (in fact none.)

Tue Feb 22 12:58:50 1994  Matti Aarnio  (mea@nic.funet.fi)

	* unix_files.c:
	    More details on various phases of SYSIN handling.
	    (And other directory assignment rules.)
